tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__SpaceRace-AAAAAAAAAAAAAAAAAAAAIg==__CetaneBoostedDie-0TQy1g-KQ0GMuvc5n6c2Tg==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 1119781406485460558,
  "prerequisites": [
    827
  ],
  "properties": {
    "auto_claim": false,
    "desc": "The other option is Cetane-Boosted Diesel. \n\nYou will need to mix either Diesel or Bio Diesel with Tetranitromethane. Check out the related quests in [quest]Tier 3 - HV[/quest] or [quest]Working with Oil[/quest] tabs for more information.",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": true,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§9§lCetane Boosted Diesel",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    827
  ],
  "rewards": [],
  "tasks": []
}
