tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__SpaceRace-AAAAAAAAAAAAAAAAAAAAIg==__DoesItContainABl-rfqcIf4uT--m6nYPenl8PQ==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 18315664624532945981,
  "prerequisites": [
    13689045632609175760
  ],
  "properties": {
    "auto_claim": false,
    "desc": "The Artificial Gravity Generator allows you to change the gravity around it to your liking. The Artificial Gravity Disruptor disables that behavior for whoever has it equipped and enabled.\n\n[note]Surely this can't be used with malicious intent...[/note]",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Does It Contain A Black Hole?",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "OR",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    13689045632609175760
  ],
  "rewards": [],
  "tasks": []
}
