tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__SpaceRace-AAAAAAAAAAAAAAAAAAAAIg==__EnceladusDungeon-AAAAAAAAAAAAAAAAAAAKwA==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 2752,
  "prerequisites": [
    1726
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Go get the schematic for tier 6 rockets.\n\nThis will open the Moons from Neptune.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": true,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Enceladus Dungeon",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    1726
  ],
  "rewards": [],
  "tasks": []
}
